<resources>
    <string name="app_name">UTube++</string>
    <string name="welcome_to_alocar">WELCOME TO UTube++</string>
    <string name="login_button">Login Button</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_sign_up_page1">SignUpPage1</string>
    <string name="title_activity_sign_up_page2">SignUpPage2</string>
    <string name="brand">Brand</string>
    <string name="car_model">Model</string>
    <string name="color">Color</string>
    <string name="registration_successfull">REGISTRATION SUCCESSFULL!</string>
    <string name="finish">FINISH</string>
    <string name="title_activity_messenger">UTube++</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="not_available">Not available</string>
    <string name="server_error">Server Error</string>
    <string name="action_search">Search</string>
    <string name="searchwithdot">Search...</string>
    <string name="title_activity_player">Player</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="refresh">Refresh</string>
</resources>
