<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="221.33dp"
        android:layout_height="70dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/ic_logo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="123dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="123dp"
        android:text="@string/welcome_to_alocar"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="none|textNoSuggestions"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhitePressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhitePressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="46.5dp"
        android:layout_marginEnd="69dp"
        android:background="@drawable/signin_button"
        android:contentDescription="@string/login_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="140dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="140dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textColor="@drawable/forgot_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="@drawable/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="signUp"
        android:text="@string/not_a_member_yet"
        android:textColor="@drawable/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>